--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -12,7 +12,7 @@
       <table class="table">
           <thead class="thead-dark">
           <tr>
-              <th scope="col">Name:</th>
+              <th scope="col" class="bg-primary">Name:</th>
               <th scope="col">Description:</th>
               <th scope="col">Start Date:</th>
               <th scope="col">Due Date:</th>
