--- a/src/main/resources/templates/taskDetails/taskDetails.html
+++ b/src/main/resources/templates/taskDetails/taskDetails.html
@@ -15,27 +15,31 @@
 <div class="container body-content">
     <h1 class="centered" th:text="${task.name}">Task Title</h1>
     <ol type="circle" class="list-group">
-        <li class="list-group-item active"><span>Details: </span><span th:text="${task.description}">Task Description</span></li>
+        <li class="list-group-item active">
+            <span>Details: </span>
+            <span th:text="${task.description}">Task Description</span>
+        </li>
         <li class="list-group-item"><span>Task ID: </span><span th:text="${task.id}">123456</span></li>
         <li class="list-group-item"><span>Start Date: </span><span th:text="${task.startDate}">2023-08-01</span></li>
         <li class="list-group-item"><span>Due Date: </span><span th:text="${task.dueDate}">2023-08-31</span></li>
-        <li class="list-group-item"></li>
-        <li th:switch="${task.taskProgressEnum}">
-            <div th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).TODO}" class="bg-danger">
+
+        <th:block th:switch="${task.taskProgressEnum}" class="list-group-item">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).TODO}" class="bg-danger list-group-item">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">To Do</span>
-            </div>
+            </li>
 
-            <div th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).INPROGRESS}" class="bg-warning">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).INPROGRESS}" class="bg-warning list-group-item">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">In Progress</span>
-            </div>
+            </li>
 
-            <div th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).COMPLETED}" class="bg-primary">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).COMPLETED}" class="bg-primary list-group-item">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">Completed</span>
-            </div>
-        </li>
+            </li>
+
+        </th:block>
 
 <!--        <span>Status: </span>-->
 <!--        <span th:text="${task.taskProgressEnum.getDisplayStatus()}">To Do</span>-->
