--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,13 +2,13 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
     <head th:fragment="head">
         <meta charset="UTF-8"/>
-        <title>Smart Planner</title>
+        <title>Zen</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     </head>
     <body>
     <nav th:fragment="header">
-        <h1 th:text="${title}">Smart Planner</h1>
+        <h1 th:text="${title}">Zen</h1>
         <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="/list">Tasks</a></li>
