--- a/src/main/resources/templates/taskDetails/taskDetails.html
+++ b/src/main/resources/templates/taskDetails/taskDetails.html
@@ -24,7 +24,7 @@
         <li class="list-group-item"><span>Due Date: </span><span th:text="${task.dueDate}">2023-08-31</span></li>
 
         <th:block th:switch="${task.taskProgressEnum}" class="list-group-item">
-            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).TODO}" class="bg-danger list-group-item">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).TODO}" class="bg-info list-group-item">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">To Do</span>
             </li>
@@ -34,7 +34,7 @@
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">In Progress</span>
             </li>
 
-            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).COMPLETED}" class="bg-primary list-group-item">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).COMPLETED}" class="bg-success list-group-item">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">Completed</span>
             </li>
