--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -7,7 +7,7 @@
 <body class="container body-content">
 <nav th:replace="fragments :: header"></nav>
 <br>
-<h1>About Zen</h1>
+<h1>Zen</h1>
 <div class="container">
     <div class="row">
         <section>
@@ -21,79 +21,111 @@
 <br>
 
 <h2>About Us</h2>
-<div class="container">
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h4>Name: John Doe</h4>
-                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
-                        <p>Features: New York, USA</p>
-                        <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
-            </div>
+<br>
+<div class="card-container">
+    <div class="card" style="width: 18rem;">
+        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04J779J2L8-7727dee0d74b-512" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Kim Hammond</h5>
+            <p><a href="https://github.com/kimsunhammond">https://github.com/kimsunhammond</a></p>
+            <br>
+            <p>Features worked on:</p>
+            <ul>
+                <li>Task Details page</li>
+                <li>Drop-down Status Selector</li>
+                <li>About Zen</li>
+            </ul>
+            <br>
+            <p>This is my first time coding, and I am happy to have completed this project!</p>
         </div>
     </div>
 
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h4>Name: John Doe</h4>
-                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
-                        <p>Features: New York, USA</p>
-                        <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
-            </div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card name 2</h5>
+            <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+            <br>
+            <p>Features worked on:</p>
+            <ul>
+                <li>Task Details page</li>
+                <li>Drop-down Status list: to do, in progress, completed</li>
+                <li>About Zen information page</li>
+            </ul>
+            <br>
+            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </div>
 
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h4>Name: John Doe</h4>
-                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
-                        <p>Features: New York, USA</p>
-                        <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
-            </div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card name 3</h5>
+            <p><a href="https://www.w3schools.com/">git hub link</a></p>
+            <br>
+            <p>Features worked on:</p>
+            <ul>
+                <li>Task Details page</li>
+                <li>Drop-down Status list: to do, in progress, completed</li>
+                <li>About Zen information page</li>
+            </ul>
+            <br>
+            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </div>
+</div>
+<br>
+
+<br>
+<div class="card-container">
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Card name 4</h5>
+            <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+            <br>
+            <p>Features worked on:</p>
+            <ul>
+                <li>Task Details page</li>
+                <li>Drop-down Status list: to do, in progress, completed</li>
+                <li>About Zen information page</li>
+            </ul>
+            <br>
+            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </div>
 
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h4>Name: John Doe</h4>
-                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
-                        <p>Features: New York, USA</p>
-                        <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
-            </div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Kim Hammond</h5>
+            <p><a href="https://github.com/kimsunhammond">https://github.com/kimsunhammond</a></p>
+            <br>
+            <p>Features worked on:</p>
+            <ul>
+                <li>Task Details page</li>
+                <li>Drop-down Status list: to do, in progress, completed</li>
+                <li>About Zen information page</li>
+            </ul>
+            <br>
+            <p>This is my first time coding, and I am happy to have completed this project!</p>
         </div>
     </div>
 
-    <div class="row">
-        <div class="card">
-            <div class="card-body">
-                <div class="row">
-                    <div class="col-md-8">
-                        <h4>Name: John Doe</h4>
-                        <p>Email or GitHub or LinkedIn?: johndoe@example.com</p>
-                        <p>Features: New York, USA</p>
-                        <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    </div>
-                </div>
-            </div>
+    <div class="card" style="width: 18rem;">
+        <img src="..." class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Chris Reams</h5>
+            <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+            <br>
+            <p>Features worked on:</p>
+            <ul>
+                <li>Task Details page</li>
+                <li>Drop-down Status list: to do, in progress, completed</li>
+                <li>About Zen information page</li>
+            </ul>
+            <br>
+            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </div>
 
