--- a/src/main/resources/templates/add.html
+++ b/src/main/resources/templates/add.html
@@ -12,7 +12,7 @@
         <label>Name
             <input th:field="${task.name}" class="form-control">
         </label>
-        <p class="error" th:errors="${task.name}"></p>
+        <p class="error" th:errors="${task.na0me}"></p>
     </div>
     <div class="form-group">
         <label>Description:
