--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -30,7 +30,9 @@
                   <a th:href="@{/edit/{id}(id=${task.id})}">Edit</a>
               </td>
               <td>
-                  <form method="post" action="/list/email"><button type="submit" class="btn btn-primary">Notify</button></form>
+                  <form method="post" th:action="@{/list/{taskId}(taskId=${task.id})}"><button type="submit" class="btn btn-primary">Notify</button>
+                      <input type="hidden" th:name="taskId" th:value="${task.id}"/>
+                  </form>
               </td>
           </tr>
           </tbody>
