--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -27,7 +27,7 @@
         <img src="https://ca.slack-edge.com/T04F99U6LV8-U04J779J2L8-7727dee0d74b-512" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Kim Hammond</h5>
-            <p><a href="https://github.com/kimsunhammond">https://github.com/kimsunhammond</a></p>
+            <p><a href="https://github.com">https://github.com/kimsunhammond</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -41,10 +41,10 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04HHCTHWDR-681b39390c19-512" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Card name 2</h5>
-            <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+            <h5 class="card-title">Ally Lynch</h5>
+            <p><a href="https://github.com">https://github.com/allybreeden</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -58,10 +58,10 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04HEHX8F45-c26a288ccfec-512" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Card name 3</h5>
-            <p><a href="https://www.w3schools.com/">git hub link</a></p>
+            <h5 class="card-title">Jesus Sanchez</h5>
+            <p><a href="https://github.com">https://github.com/usersjesus</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -79,10 +79,10 @@
 <br>
 <div class="card-container">
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://avatars.githubusercontent.com/u/105828543?v=4" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Card name 4</h5>
-            <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+            <h5 class="card-title">Victoria Morris</h5>
+            <p><a href="https://github.com">https://github.com/heyimvictoria</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -98,8 +98,8 @@
     <div class="card" style="width: 18rem;">
         <img src="..." class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Kim Hammond</h5>
-            <p><a href="https://github.com/kimsunhammond">https://github.com/kimsunhammond</a></p>
+            <h5 class="card-title">Shelvy </h5>
+            <p><a href="https://github.com">https://github.com/name</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -113,10 +113,10 @@
     </div>
 
     <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04Q1L6JJTZ-3d3981b1f2b2-512" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Chris Reams</h5>
-            <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+            <p><a href="https://github.com">https://github.com/chrisreams91</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
