--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -27,13 +27,13 @@
         <img src="https://ca.slack-edge.com/T04F99U6LV8-U04J779J2L8-7727dee0d74b-512" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Kim Hammond</h5>
-            <p><a href="https://github.com">https://github.com/kimsunhammond</a></p>
+            <p><a href="https://github.com/kimsunhammond">https://github.com/kimsunhammond</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
-                <li>Task Details page</li>
+                <li>Task View page</li>
                 <li>Drop-down Status Selector</li>
-                <li>About Zen</li>
+                <li>About Zen page</li>
             </ul>
             <br>
             <p>This is my first time coding, and I am happy to have completed this project!</p>
@@ -44,28 +44,30 @@
         <img src="https://ca.slack-edge.com/T04F99U6LV8-U04HHCTHWDR-681b39390c19-512" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Ally Lynch</h5>
-            <p><a href="https://github.com">https://github.com/allybreeden</a></p>
+            <p><a href="https://github.com/allybreeden">https://github.com/allybreeden</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
-                <li>Task Details page</li>
-                <li>Drop-down Status list: to do, in progress, completed</li>
-                <li>About Zen information page</li>
+                <li>Home page</li>
+                <li>Navigation Bar</li>
+                <li>Update/Edit Tasks</li>
+                <li>User Profile page</li>
             </ul>
             <br>
-            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>“Technology is best when it brings people together.”
+                -Matt Mullenweg</p>
         </div>
     </div>
 
     <div class="card" style="width: 18rem;">
-        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04HEHX8F45-c26a288ccfec-512" class="card-img-top" alt="...">
+        <img src="https://avatars.githubusercontent.com/u/105828543?v=4" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Jesus Sanchez</h5>
-            <p><a href="https://github.com">https://github.com/usersjesus</a></p>
+            <h5 class="card-title">Victoria Morris</h5>
+            <p><a href="https://github.com/heyimvictoria">https://github.com/heyimvictoria</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
-                <li>Task Details page</li>
+                <li>Light and Dark Mode</li>
                 <li>Drop-down Status list: to do, in progress, completed</li>
                 <li>About Zen information page</li>
             </ul>
@@ -74,32 +76,14 @@
         </div>
     </div>
 </div>
-<br>
-
-<br>
+    <br>
+    <br>
 <div class="card-container">
     <div class="card" style="width: 18rem;">
-        <img src="https://avatars.githubusercontent.com/u/105828543?v=4" class="card-img-top" alt="...">
+        <img src="https://ptwebdev-stl-jan2023.slack.com/files/U04HHCN8XUK/F05MSQ19RM1/img_1083.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-            <h5 class="card-title">Victoria Morris</h5>
-            <p><a href="https://github.com">https://github.com/heyimvictoria</a></p>
-            <br>
-            <p>Features worked on:</p>
-            <ul>
-                <li>Task Details page</li>
-                <li>Drop-down Status list: to do, in progress, completed</li>
-                <li>About Zen information page</li>
-            </ul>
-            <br>
-            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
-    </div>
-
-    <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Shelvy </h5>
-            <p><a href="https://github.com">https://github.com/name</a></p>
+            <h5 class="card-title">Shelvy Murphy-Brown</h5>
+            <p><a href="https://github.com/shelvy00">https://github.com/shelvy00</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -116,7 +100,7 @@
         <img src="https://ca.slack-edge.com/T04F99U6LV8-U04Q1L6JJTZ-3d3981b1f2b2-512" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Chris Reams</h5>
-            <p><a href="https://github.com">https://github.com/chrisreams91</a></p>
+            <p><a href="https://github.com/chrisreams91">https://github.com/chrisreams91</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -129,6 +113,23 @@
         </div>
     </div>
 
+    <div class="card" style="width: 18rem;">
+        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04HEHX8F45-c26a288ccfec-512" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Jesus Sanchez</h5>
+            <p><a href="https://github.com/usersjesus">https://github.com/usersjesus</a></p>
+            <br>
+            <p>Features worked on:</p>
+            <ul>
+                <li>Task Details page</li>
+                <li>Drop-down Status list: to do, in progress, completed</li>
+                <li>About Zen information page</li>
+            </ul>
+            <br>
+            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
