--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -24,16 +24,11 @@
     <h2>Search by:</h2>
 
     <p>
-            <span th:each="column : ${columns}">
-                <input
-                        type="radio"
-                        name="searchType"
-                        th:id="${column.key}"
-                        th:value="${column.key}"
-                        th:checked="${column.key == 'all'}"/>
-                <label th:for="${column.key}" th:text="${column.value}"></label>
-            </span>
-
+      <label>All<input type="radio" name="searchType" value="all"/></label>
+      <label>Name<input type="radio" name="searchType" value="name"/></label>
+      <label>Description<input type="radio" name="searchType" value="description"/></label>
+      <label>Start Date<input type="radio" name="searchType" value="start date"/></label>
+      <label >Due Date<input type="radio" name="searchType" value="due date"/></label>
     </p>
 
     <p>
