--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -25,11 +25,11 @@
     <h2>Search by:</h2>
 
     <p>
-      <label>All<input type="radio" name="searchType" value="all"/></label>
+      <label>All<input checked="checked" type="radio" name="searchType" value="all"/></label>
       <label>Name<input type="radio" name="searchType" value="name"/></label>
       <label>Description<input type="radio" name="searchType" value="description"/></label>
       <label>Start Date<input type="radio" id="date" name="searchType" value="start date"/></label>
-      <label >Due Date<input type="radio" id="date" name="searchType" value="due date"/></label>
+      <label >Due Date<input type="radio" name="searchType" value="due date"/></label>
     </p>
 
     <p>
