Updated href for Tasks & changed description

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
                     style="background-image: url('/images/green-ferns.png');
                     height: 100vh;">
                 <p>
-                    <a class="btn btn-light" href="/add" role="button">Tasks</a>
+                    <a class="btn btn-light" href="/list" role="button">Tasks</a>
                     <a class="btn btn-light btn-lg" href="/add" role="button">Get Started</a>
                     <a class="btn btn-light" href="/profile" role="button">Profile</a>
                 </p>
@@ -19,7 +19,7 @@
             <!-- Second image -->
             <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
                  style="background-image: url('/images/sand.png');">
-                <h1 class="mb-3 h2">All your tasks in one Peaceful Place</h1>
+                <h1 class="mb-3 h2">All your tasks in one peaceful place</h1>
                 <p>
                     Discover tranquility and efficiency in your daily tasks with Zen.
                     Experience a serene way to manage your to-dos, effortlessly track their progress,
