all photos added; still need all info

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -50,7 +50,7 @@
             <ul>
                 <li>Home page</li>
                 <li>Navigation Bar</li>
-                <li>Update/Edit Tasks</li>
+                <li>Update/Edit Task</li>
                 <li>User Profile page</li>
             </ul>
             <br>
@@ -68,8 +68,8 @@
             <p>Features worked on:</p>
             <ul>
                 <li>Light and Dark Mode</li>
-                <li>Drop-down Status list: to do, in progress, completed</li>
-                <li>About Zen information page</li>
+                <li>Add and Delete Task</li>
+                <li>Date Picker</li>
             </ul>
             <br>
             <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -80,36 +80,19 @@
     <br>
 <div class="card-container">
     <div class="card" style="width: 18rem;">
-        <img src="https://ptwebdev-stl-jan2023.slack.com/files/U04HHCN8XUK/F05MSQ19RM1/img_1083.jpg" class="card-img-top" alt="...">
+        <img src="https://media.licdn.com/dms/image/C5603AQEhuQx2R4oz-A/profile-displayphoto-shrink_400_400/0/1651105642834?e=1697673600&v=beta&t=g2c8Uy2_-OD1WHXYNMxPYzlBeLfVaBIfnaXIyLeTO4k" class="card-img-top" alt="...">
         <div class="card-body">
             <h5 class="card-title">Shelvy Murphy-Brown</h5>
             <p><a href="https://github.com/shelvy00">https://github.com/shelvy00</a></p>
             <br>
             <p>Features worked on:</p>
             <ul>
-                <li>Task Details page</li>
-                <li>Drop-down Status list: to do, in progress, completed</li>
-                <li>About Zen information page</li>
+                <li>Task List page</li>
+                <li>Automated Email Reminder</li>
+                <li></li>
             </ul>
             <br>
-            <p>This is my first time coding, and I am happy to have completed this project!</p>
-        </div>
-    </div>
-
-    <div class="card" style="width: 18rem;">
-        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04Q1L6JJTZ-3d3981b1f2b2-512" class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">Chris Reams</h5>
-            <p><a href="https://github.com/chrisreams91">https://github.com/chrisreams91</a></p>
-            <br>
-            <p>Features worked on:</p>
-            <ul>
-                <li>Task Details page</li>
-                <li>Drop-down Status list: to do, in progress, completed</li>
-                <li>About Zen information page</li>
-            </ul>
-            <br>
-            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>Learning new skills in tech takes drive and tenacity. Always challenge yourself to expand your knowledge.</p>
         </div>
     </div>
 
@@ -121,15 +104,32 @@
             <br>
             <p>Features worked on:</p>
             <ul>
-                <li>Task Details page</li>
-                <li>Drop-down Status list: to do, in progress, completed</li>
-                <li>About Zen information page</li>
+                <li>MySQL Database</li>
+                <li>Login page</li>
+                <li>Search Bar</li>
             </ul>
             <br>
             <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </div>
     </div>
-</div>
 
+    <div class="card" style="width: 18rem;">
+        <img src="https://ca.slack-edge.com/T04F99U6LV8-U04Q1L6JJTZ-3d3981b1f2b2-512" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title">Chris Reams</h5>
+            <p><a href="https://github.com/chrisreams91">https://github.com/chrisreams91</a></p>
+            <br>
+            <p>Our fearless T.A.!</p>
+            <ul>
+                <li>Led the team in their first project</li>
+                <li>Helped with any technical problems</li>
+                <li>Demonstrated the project management process</li>
+            </ul>
+            <br>
+            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
