updated single-task page status colors

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -2,6 +2,10 @@
 <html lang="en" xmlns:th="https://www.thymeleaf.org/">
 <head th:replace="fragments :: head">
     <meta charset="UTF-8">
+
+<!--    Bootstrap CSS-->
+<!--    <link href="bootstrap info"-->
+<!--    <link rel="stylesheet" href="style.css">-->
 </head>
 
 <body class="container body-content">
