--- a/src/main/resources/templates/taskDetails/taskDetails.html
+++ b/src/main/resources/templates/taskDetails/taskDetails.html
@@ -15,7 +15,7 @@
 <div class="container body-content">
     <h1 class="centered" th:text="${task.name}">Task Title</h1>
     <ol type="circle" class="list-group">
-        <li class="list-group-item active">
+        <li class="list-group-item list-group-item-dark">
             <span>Details: </span>
             <span th:text="${task.description}">Task Description</span>
         </li>
@@ -24,17 +24,17 @@
         <li class="list-group-item"><span>Due Date: </span><span th:text="${task.dueDate}">2023-08-31</span></li>
 
         <th:block th:switch="${task.taskProgressEnum}" class="list-group-item">
-            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).TODO}" class="bg-info list-group-item">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).TODO}" class="list-group-item list-group-item-primary">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">To Do</span>
             </li>
 
-            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).INPROGRESS}" class="bg-warning list-group-item">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).INPROGRESS}" class="list-group-item list-group-item-secondary">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">In Progress</span>
             </li>
 
-            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).COMPLETED}" class="bg-success list-group-item">
+            <li th:case="${T(org.launchcode.liftoffgroupproject.models.TaskProgressEnum).COMPLETED}" class="list-group-item list-group-item-success">
                 <span>Status: </span>
                 <span th:text="${task.taskProgressEnum.getDisplayStatus()}">Completed</span>
             </li>
