updated colors, status button; finished about page

--- a/src/main/resources/templates/about.html
+++ b/src/main/resources/templates/about.html
@@ -36,11 +36,12 @@
             <p>Features worked on:</p>
             <ul>
                 <li>Task View page</li>
-                <li>Drop-down Status Selector</li>
+                <li>Status Selector</li>
                 <li>About Zen page</li>
             </ul>
             <br>
-            <p>This is my first time coding, and I am happy to have completed this project!</p>
+            <br>
+            <p>"Success is not final, failure is not fatal: It is the courage to continue that counts." -Winston Churchill</p>
         </div>
     </div>
 
@@ -49,6 +50,7 @@
         <div class="card-body">
             <h5 class="card-title">Ally Lynch</h5>
             <p><a href="https://github.com/allybreeden">https://github.com/allybreeden</a></p>
+            <br>
             <br>
             <p>Features worked on:</p>
             <ul>
@@ -76,7 +78,8 @@
                 <li>Date Picker</li>
             </ul>
             <br>
-            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <br>
+            <p>“My name is likely in rooms I have yet to enter. This is only the beginning of my life as a developer.”</p>
         </div>
     </div>
 </div>
@@ -89,14 +92,15 @@
             <h5 class="card-title">Shelvy Murphy-Brown</h5>
             <p><a href="https://github.com/shelvy00">https://github.com/shelvy00</a></p>
             <br>
+            <br>
             <p>Features worked on:</p>
             <ul>
                 <li>Task List page</li>
                 <li>Automated Email Reminder</li>
-                <li></li>
+
             </ul>
             <br>
-            <p>Learning new skills in tech takes drive and tenacity. Always challenge yourself to expand your knowledge.</p>
+            <p>"Learning new skills in tech takes drive and tenacity. Always challenge yourself to expand your knowledge."</p>
         </div>
     </div>
 
@@ -106,6 +110,7 @@
             <h5 class="card-title">Jesus Sanchez</h5>
             <p><a href="https://github.com/usersjesus">https://github.com/usersjesus</a></p>
             <br>
+            <br>
             <p>Features worked on:</p>
             <ul>
                 <li>MySQL Database</li>
@@ -113,7 +118,7 @@
                 <li>Search Bar</li>
             </ul>
             <br>
-            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <p>"There's nothing to it than to do it!"</p>
         </div>
     </div>
 
@@ -124,13 +129,7 @@
             <p><a href="https://github.com/chrisreams91">https://github.com/chrisreams91</a></p>
             <br>
             <p>Our fearless T.A.!</p>
-            <ul>
-                <li>Led the team in their first project</li>
-                <li>Helped with any technical problems</li>
-                <li>Demonstrated the project management process</li>
-            </ul>
-            <br>
-            <p>About: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
         </div>
     </div>
 
