--- a/src/main/resources/templates/taskDetails/taskDetails.html
+++ b/src/main/resources/templates/taskDetails/taskDetails.html
@@ -16,10 +16,10 @@
     <h1 class="centered" th:text="${task.name}">Task Title</h1>
     <ol type="circle" class="list-group">
         <li class="list-group-item list-group-item-dark">
-            <span>Details: </span>
-            <span th:text="${task.description}">Task Description</span>
+            <span>Task ID: </span>
+            <span th:text="${task.id}">123</span>
         </li>
-        <li class="list-group-item"><span>Task ID: </span><span th:text="${task.id}">123456</span></li>
+        <li class="list-group-item"><span>Details: </span><span th:text="${task.description}">asdfadf</span></li>
         <li class="list-group-item"><span>Start Date: </span><span th:text="${task.startDate}">2023-08-01</span></li>
         <li class="list-group-item"><span>Due Date: </span><span th:text="${task.dueDate}">2023-08-31</span></li>
 
